--- a/main.html
+++ b/main.html
@@ -10,6 +10,17 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<body>
+  <div class="container">
+    <p>This is the first paragraph.</p>
+    <ul>
+      <li>Item 1</li>
+      <li>Item 2</li>
+      <li>Item 3</li>
+    </ul>
+    <p>This is the last paragraph.</p>
+  </div>
+</body>
 
 </body>
 
