--- a/main.html
+++ b/main.html
@@ -13,12 +13,15 @@
 <body>
   <div class="container">
     <p>This is the first paragraph.</p>
+	  <p>This is the first paragraph.</p>
+	  <p>This is the first paragraph.</p>
+	  <p style="color:red">This is the last paragraph.</p>
     <ul>
       <li>Item 1</li>
       <li>Item 2</li>
       <li>Item 3</li>
     </ul>
-    <p>This is the last paragraph.</p>
+    
   </div>
 </body>
 
